--- a/Maetro-MVP/pom.xml
+++ b/Maetro-MVP/pom.xml
@@ -32,6 +32,17 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.microsoft.azure.cognitiveservices</groupId>
+            <artifactId>azure-cognitiveservices-computervision</artifactId>
+            <version>1.0.9-beta</version>
+        </dependency>
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-identity</artifactId>
+            <version>1.18.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
