feat: spotify integration architecture

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,15 @@ services:
       - AZURE_VISION_ENDPOINT=${AZURE_VISION_ENDPOINT}
       - AZURE_VISION_KEY=${AZURE_VISION_KEY}
       - SPRING_AI_OLLAMA_BASE_URL=http://ollama:11434
+      - CLIENT_ID=${SPOTIFY_CLIENT_ID}
+      - CLIENT_SECRET=${SPOTIFY_CLIENT_SECRET}
     ports:
       - "8080:8080"
     depends_on:
+      spotifyd:
+        condition: service_completed_successfully
+      visual-service:
+        condition: service_completed_successfully
       ollama-model-puller:
         condition: service_completed_successfully
 
@@ -41,10 +47,26 @@ services:
     logging:
       driver: "none"
 
+  #spotifyd:
+    # image: gallows/spotifyd:latest
+    #container_name: spotifyd
+    #network_mode: host
+        #devices:
+      #- /dev/snd:/dev/snd
+        #volumes:
+      #- ./spotifyd.conf:/etc/spotifyd.conf:ro
+    #restart: always
+        #environment:
+        #- SPOTIFY_USERNAME=${SPOTIFY_USER}
+        #- SPOTIFY_PASSWORD=${SPOTIFY_PASSWORD}
+        #- SPOTIFY_DEVICE_NAME=${SPOTIFY_DEVICE_NAME}
+      #- SPOTIFY_BITRATE=320
+
+
   ollama:
     image: ollama/ollama:latest
     ports:
-      - "11434:11434"
+      - "11434:11434"f
     volumes:
       - ollama_data:/root/.ollama
     healthcheck:
