--- a/Maetro-MVP/pom.xml
+++ b/Maetro-MVP/pom.xml
@@ -38,6 +38,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.6</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.microsoft.azure.cognitiveservices</groupId>
             <artifactId>azure-cognitiveservices-computervision</artifactId>
             <version>1.0.9-beta</version>
@@ -79,6 +86,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <dependencyManagement>
