--- a/Maetro-MVP/src/main/resources/application.properties
+++ b/Maetro-MVP/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=Maetro-MVP
-spring.ai.mistralai.api-key= ${MISTRAL_AI_KEY}
+spring.ai.mistralai.api-key= ${MISTRAL_API_KEY}
 spring.ai.ollama.init.embedding.include=false
