--- a/Maetro-MVP/pom.xml
+++ b/Maetro-MVP/pom.xml
@@ -85,11 +85,11 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>dev.arbjerg</groupId>
             <artifactId>lavaplayer</artifactId>
-            <version>2.2.2</version>
+            <version>2.2.6</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <dependencyManagement>
