--- a/Maetro-MVP/Dockerfile
+++ b/Maetro-MVP/Dockerfile
@@ -17,8 +17,9 @@ WORKDIR /app
 # 1. fswebcam (pour la caméra)
 # 2. libasound2 (OBLIGATOIRE pour le son en Java)
 # 3. alsa-utils (Outils de diagnostic audio)
+# 4. libasound2-plugins (Pour l'intégration PulseAudio)
 RUN apt-get update && \
-    apt-get install -y fswebcam libasound2 alsa-utils && \
+    apt-get install -y fswebcam libasound2 alsa-utils libasound2-plugins && \
     rm -rf /var/lib/apt/lists/*
 
 # Copie du jar depuis le builder
