fix : hopes and dreams

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
     devices:
       - "/dev/video0:/dev/video0"
     environment:
-      - PYTHONUNBUFFERED=1
+      - PYTHONUNBUFFERED=1f
     restart: unless-stopped
     logging:
       driver: "none"
